<resources>
    <string name="app_name">YCCE ExamPrep</string>
    <string name="web_server_id">"248534790481-h3sjgnfr4akcunqvm1f1ameat5mpj7io.apps.googleusercontent.com"</string>
    <string name="demo_user">Hello, \nDipesh!</string>

<!-- Image Content Description-->
    <string name="splash_icon">Splash Icon</string>
    <string name="login_icon">Login Icon</string>

<!-- Splash Screen Resources-->
    <string name="crafted_by">Crafted By</string>

<!-- Login Screen Resources-->
    <string name="login_title">YCCE YEARBOOK</string>
    <string name="login_subtitle">\tCollege\n\tResources\n\tApp</string>
    <string name="sign_in_button">Sign In With Google</string>

<!--  Home Screen Resources-->

    <!-- Bottom Nav Resources   -->
        <string name="menu_home">Home</string>
        <string name="menu_recent">Recent</string>
        <string name="menu_notices">Notices</string>
        <string name="menu_more">More</string>
        <string name="ellipsis">&#8230;</string>

    <!--  Department Resources  -->
    <string name="department_title">Departments</string>
        <string name="ct">CT</string>
        <string name="demo_subject">Design Analysis of Algorithms</string>
    <!--  Other Features Resources -->
    <string name="other_features_title">Other Features</string>
        <string name="ycce_website">YCCE</string>
        <string name="moodle">Moodle</string>
        <string name="upload_paper">Upload Paper</string>
        <string name="fees_payment">Fees Payment</string>


<!--  Recent Screen -->
    <string name="recent_title">Recent</string>
    <string name="course_name">Course Name \n \ncourse_code \t \t \t \t upload_date</string>


<!--  Semester Screen -->
    <string name="department_art">department art</string>
    <string name="sem3">Semester - 3</string>

<!--  Pdf Renderer Screen  -->
    <string name="previous">Previous</string>
    <string name="next">Next</string>


<!--  Notification Manager   -->
    <string name="yearbook_channel">YEARBOOK_CHANNEL</string>
</resources>
