<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        style="@style/RoundedFrontBottomSheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:background="@color/color_secondary"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="20dp">
        <TextView
            style="@style/title_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/department_title" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/department_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginBottom="40dp"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            tools:itemCount="2"
            tools:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            tools:listitem="@layout/department_card_layout" />

        <TextView
            style="@style/title_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other_features_title"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/other_features_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            tools:listitem="@layout/other_features_card_layout"
            tools:itemCount="1"/>

        <TextView
            style="@style/splash_textView"
            android:textColor="@color/color_on_secondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_margin="10dp"
            android:text="@string/crafted_by"
            android:gravity="center"/>
    </LinearLayout>
    </com.google.android.material.card.MaterialCardView>