<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/profile_view"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:shapeAppearanceOverlay="@style/RoundedImageview"
            tools:src="@drawable/login_icon"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.95"/>

        <TextView
            android:id="@+id/welcome_display"
            style="@style/home_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_margin="20dp"
            android:fontFamily="@font/montserrat_bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"/>

        <TextView
            android:id="@+id/user_name_text_view"
            style="@style/home_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/montserrat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.055"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/welcome_display"
            tools:text="@string/demo_user" />

        <ImageView
            android:id="@+id/home_back_art"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:cropToPadding="true"
            android:layout_marginTop="30dp"
            android:src="@drawable/home_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="1"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/department_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/home_back_art"/>

        <TextView
            android:id="@+id/other_feature_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other_features_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="?android:attr/textColorSecondary"
            android:fontFamily="@font/montserrat_bold"
            android:layout_marginTop="18dp"
            app:layout_constraintTop_toBottomOf="@id/department_recycler"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/other_features_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/other_feature_title"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>